--- a/index-a.html
+++ b/index-a.html
@@ -244,9 +244,9 @@
 								<hr class="line"/>
                             </div>
                         </div>
-                        <div class="grid-item work3d design new percent-33">
+                        <!--<div class="grid-item work3d design new percent-33">
                             <div class="single-portfolio overlay">
-                                <img src="assets/img/portfolio/five/9.jpg" alt="RMH" />
+                                <img src="assets/img/portfolio/five/9.jpg" alt="" />
                                 <div class="zoom-icon">
                                     <a class="venobox" data-gall="gall-img" href="assets/img/portfolio/five/9.jpg">
                                         <i class="zmdi zmdi-fullscreen"></i>
@@ -258,7 +258,7 @@
                                 <p>Print, Branding</p>
 								<hr class="line"/>
                             </div>
-                        </div>
+                        </div>-->
 						
                     </div>
                     <!--<div class="view-all text-center">
