--- a/abouta.html
+++ b/abouta.html
@@ -123,10 +123,10 @@
 									</div>
 									<div class="title-like">
 										<p><i><bold>"Where the spirit does not work with the hand, there is no art."</i> ~ Leonardo da Vinci</p></bold>
-										<p class="ptb-20 mb-5">Robert is a Texas-born oil painter whose evocative landscapes capture the sublime beauty and vastness of the American landscape and destinations beyond. Drawing inspiration from historical landscape masters like Sanford Gifford and Frederic Edwin Church, his work blends a reverence for nature’s grandeur with a distinctly personal, emotive touch. Robert brings a fresh perspective shaped by years of experience in large-format photography, with emphasis on meticulous attention to composition, light, and texture.</p> 
+										<p class="ptb-20 mb-5">Robert is a Texas-born oil painter whose evocative landscapes capture the sublime beauty and vastness of the American landscape and destinations beyond. Drawing inspiration from historical landscape masters like Sanford Gifford and Frederic Edwin Church, his work blends a reverence for nature’s grandeur with a distinctly personal, emotive touch.</p><p>Robert brings a fresh perspective shaped by years of experience in large-format photography, with emphasis on meticulous attention to composition, light, and texture.</p> 
 								        
 									</div>
-								</div>
+								</div><br>
 								<p>Each painting reflects a deep connection to the land, imbued with the warm hues and rugged spirit of America, echoing the timeless drama of his artistic forebears. Robert’s paintings invite viewers to pause and immerse themselves in the quiet, sublime magnificence of the natural world.</p>
 								<br><br>
 								<center><p><img src="https://roberthunt.com/images/rmh_logo4.png" alt="RMH"></p></center>
