--- a/tayrona-national-park.html
+++ b/tayrona-national-park.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
 
-    <title>R M Hunt Fine Art - Dawn at Ricon del Mar | Colombia</title>
+    <title>R M Hunt Fine Art - Tayrona National Park | Colombia</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
