--- a/pawnee-buttes-colorado.html
+++ b/pawnee-buttes-colorado.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
 
-    <title>R M Hunt Fine Art - Tayrona National Park | Colombia</title>
+    <title>R M Hunt Fine Art - Sunset at Pawnee Buttes | Colorado</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
@@ -99,7 +99,7 @@
 				<div class="col-xs-12">
 					<div class="page-title ptb-110">
 						<h1 class="mb-15">R M Hunt Fine Art</h1>
-						<h4 class="mb-5">Tayrona National Park | Colombia</h4>
+						<h4 class="mb-5">Sunset at Pawnee Buttes | Colorado</h4>
 					</div>
 				</div>
 			</div>
@@ -114,14 +114,14 @@
 				<div class="col-xs-12 col-sm-6 col-md-7">
 					<div class="portfolio-image mb-30">
 						<!--<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/yosemite_large.jpg" alt="Yosemite">-->
-							<img src="https://roberthunt.com/images/tayrona_large.jpg" alt="Tayrona National Park" />
+							<img src="https://roberthunt.com/images/pawnee-buttes_large.jpg" alt="Tayrona National Park" />
 						</a>
 					</div>
 					
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
-						<h3>Tayrona National Park | Colombia</h3>
+						<h3>Sunset at Pawnee Buttes | Colorado</h3>
 						<p>Tayrona is known for its biodiversity, dramatic landscapes, and cultural significance. The park encompasses tropical rainforests, cloud forests, and pristine beaches framed by the Sierra Nevada de Santa Marta mountains. Its coastline features turquoise waters, coral reefs, and iconic spots like Cabo San Juan, with palm-fringed shores and granite boulders. </p>
 						<ul class="work-info pt-40">
 							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
@@ -141,7 +141,7 @@
 							</li>
 							<ul class="work-info pt-40" "navigation clearfix"><br><br>
 										<li><a href="https://roberthunt.com/rincon-del-mar.html" style="margin-right: 50px;" class="previous">&#9664;</a>
-                                           <a href="https://roberthunt.com/pawnee-buttes-colorado.html" class="next">&#9654;</li></a>
+                                           <a href="#" class="next">&#9654;</li></a>
 									</ul>
 						</ul>
 					</div>
