--- a/index-a.html
+++ b/index-a.html
@@ -229,13 +229,28 @@
 								<hr class="line"/>
                             </div>
                         </div>
+						<div class="grid-item work3d print percent-33">
+                            <div class="single-portfolio overlay">
+                                <img src="https://roberthunt.com/images/pawnee-buttes370250.jpg" alt="Pawnee Buttes Colorado" />
+                                <div class="zoom-icon">
+                                    <a href="https://roberthunt.com/pawnee-buttes-colorado.html">
+                                        <i class="zmdi zmdi-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="project-title text-center">
+                                <a href="https://roberthunt.com/pawnee-buttes-colorado.html"><h4 class="mb-5">Pawnee Buttes</h4></a>
+                                
+								<hr class="line"/>
+                            </div>
+                        </div>
                         <div class="grid-item work3d print percent-33">
                             <div class="single-portfolio overlay">
                                 <img src="https://roberthunt.com/images/mtc.jpg" alt="more to come" />
                                 <div class="zoom-icon">
-                                    <a href="">
+                                   <!-- <a href="">
                                         <i class="zmdi zmdi-link"></i>
-                                    </a>
+                                    </a>-->
                                 </div>
                             </div>
                             <div class="project-title text-center">
