--- a/pawnee-buttes-colorado.html
+++ b/pawnee-buttes-colorado.html
@@ -122,7 +122,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
 						<h3>Sunset at Pawnee Buttes | Colorado</h3>
-						<p>Tayrona is known for its biodiversity, dramatic landscapes, and cultural significance. The park encompasses tropical rainforests, cloud forests, and pristine beaches framed by the Sierra Nevada de Santa Marta mountains. Its coastline features turquoise waters, coral reefs, and iconic spots like Cabo San Juan, with palm-fringed shores and granite boulders. </p>
+						<p>The Pawnee Buttes are two prominent geological formations in northeastern Colorado, located ithin the Pawnee National Grassland, about 13 miles south of the Wyoming border. Rising approximately 300 feet above the surrounding prairie, these buttes are erosional remnants of the High Plains, shaped by wind and water over millions of years. </p>
 						<ul class="work-info pt-40">
 							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
 							<li><span>Created:</span> <p>2025</p></li>
@@ -140,7 +140,7 @@
 								
 							</li>
 							<ul class="work-info pt-40" "navigation clearfix"><br><br>
-										<li><a href="https://roberthunt.com/rincon-del-mar.html" style="margin-right: 50px;" class="previous">&#9664;</a>
+										<li><a href="https://roberthunt.com/tayrona-national-park.html" style="margin-right: 50px;" class="previous">&#9664;</a>
                                            <a href="#" class="next">&#9654;</li></a>
 									</ul>
 						</ul>
