--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     <link rel="stylesheet" href="style.css">
     <!-- modernizr js -->
     <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
-
+<style>
+span.email b {
+  display: none;
+}
+</style>
 </head>
 
 <body>
@@ -51,14 +55,15 @@
 										<a href="index.html"><img src="https://roberthunt.com/images/logo1.png" alt="RMH" />
 										</a>
 									</div>
-									<p class="mb-30">We're busy working on the final touches for the new look. Almost ready!</p>
+									<p class="mb-30">We're busy working on the final touches for the new look. Almost ready!<br> If you need to Contact us: <span class="email">info@roberthunt<b>.roberthunt</b>.com</span></p>
+									
 									<div id="timer">
 										<div id="days"></div>
 										<div id="hours"></div>
 										<div id="minutes"></div>
 										<div id="seconds"></div>
 									</div>
-									<a class="btn venobox mt-50" data-vbtype="iframe" href="contact-robert.html">Contact Us</a>
+									
 								</div>
 							</div>
 						</div>
