--- a/firstpage-b.html
+++ b/firstpage-b.html
@@ -116,7 +116,7 @@
 	</div>
 	<div class="view-all unset text-center">
                         <a class="btn mt-5" href="https://roberthunt.com/index-a.html">View More <i class="zmdi zmdi-arrow-right"></i></a>
-                    </div>
+                    </div><br><br>
 	<!-- We Area Section End -->
 	<!-- Services Section Start -->
 	
@@ -130,7 +130,7 @@
     <!-- Testmonial Section Start -->
     
     <!-- Testimonial Section End -->
-	<hr class="devider"/>
+	<!--<hr class="devider"/>-->
     <!-- Footer Section Start -->
     <footer class="footer white-bg ptb-100 clearfix">
         <div class="container">
