--- a/index-a.html
+++ b/index-a.html
@@ -42,21 +42,14 @@
     <!-- Loading Bar End -->
     <!-- Loading Bar End -->
     <!-- Header Section Start -->
-    <header class="header-style-1">
+        <header class="header-style-1">
 		<div class="header-top active-sticky">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12 col-sm-2 col-md-3">
-						<div class="left">
-							<div class="logo">
-								<a href="index.html"><img src="https://roberthunt.com/images/rmh_logo.png" alt="RMH" />
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-10 col-md-9">
-						<div class="right">
-							<nav class="mainmenu menu-hover-1 pull-right">
+					<div class="col-xs-12">
+						<div class="logo-and-menu text-center">
+							
+							<nav class="mainmenu menu-hover-1">
 								<div class="navbar-header">
 									<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 										<span class="icon-bar"></span>
