--- a/firstpage-a.html
+++ b/firstpage-a.html
@@ -42,21 +42,14 @@
     <!-- Loading Bar End -->
     <!-- Loading Bar End -->
     <!-- Header Section Start -->
-    <header class="header-style-1">
+        <header class="header-style-1">
 		<div class="header-top active-sticky">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12 col-sm-2 col-md-3">
-						<div class="left">
-							<div class="logo">
-								<a href="index.html"><img src="https://roberthunt.com/images/rmh_logo.png" alt="RMH" />
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-10 col-md-9">
-						<div class="right">
-							<nav class="mainmenu menu-hover-1 pull-right">
+					<div class="col-xs-12">
+						<div class="logo-and-menu text-center">
+							
+							<nav class="mainmenu menu-hover-1">
 								<div class="navbar-header">
 									<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 										<span class="icon-bar"></span>
@@ -102,7 +95,7 @@
 				<div class="col-xs-12">
 					<div class="page-title ptb-110">
 						<h1 class="mb-15">R M Hunt Fine Art</h1>
-						<h3 class="mb-5">An American Landscape Painter</h3>
+						<h4 class="mb-5">An American Landscape Painter</h4>
 					</div>
 				</div>
 			</div>
@@ -177,7 +170,7 @@
 			
         </div>
 		<div class="view-all unset text-center">
-                        <a class="btn mt-40" href="https://roberthunt.com/index-a.html">View More <i class="zmdi zmdi-arrow-right"></i></a>
+                        <a class="btn mt-40" href="https://roberthunt.com/index-a.html">View More <i class="zmdi zmdi-arrow-right"></i></a><br><br>
                     </div>
     </div>
     <!-- Team Section End -->
@@ -187,7 +180,7 @@
     <!-- Testmonial Section Start -->
     
     <!-- Testimonial Section End -->
-	<hr class="devider"/>
+	<!--<hr class="devider"/>-->
     <!-- Footer Section Start -->
     <footer class="footer white-bg ptb-20 clearfix">
         <div class="container">
