--- a/firstpage-b.html
+++ b/firstpage-b.html
@@ -115,7 +115,7 @@
 		</div>
 	</div>
 	<div class="view-all unset text-center">
-                        <a class="btn mt-5" href="https://roberthunt.com/index-a.html">View More <i class="zmdi zmdi-arrow-right"></i></a>
+                       <br> <a class="btn mt-5" href="https://roberthunt.com/index-a.html">View More <i class="zmdi zmdi-arrow-right"></i></a>
                     </div><br><br>
 	<!-- We Area Section End -->
 	<!-- Services Section Start -->
