--- a/robbins.html
+++ b/robbins.html
@@ -120,7 +120,7 @@
 	</div>
 	<!-- Breadcrumbs End -->
 	<!-- Portfolio Details Section Start -->
-	<div class="portfolio-details light-bg section-padding">
+	<div class="we-are white-bg ptb-100">
 		<div class="container">
 			<div class="row">
 				
