--- a/robbins.html
+++ b/robbins.html
@@ -112,7 +112,7 @@
 				<div class="col-xs-12">
 					<div class="page-title">
 						<h1 class="mb-15">R M Hunt Fine Art</h1>
-						<h4 class="mb-5">Twilight At Robbins Creek</h4>
+						<h4 class="mb-5"></h4>
 					</div>
 				</div>
 			</div>
