--- a/index-a.html
+++ b/index-a.html
@@ -92,7 +92,7 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-xs-12">
-					<div class="page-title ptb-60">
+					<div class="page-title">
 						<h1 class="mb-15">R M Hunt Fine Art</h1>
 						<h4 class="mb-5">Selected Works</h4>
 					</div>
