--- a/lands_end2.html
+++ b/lands_end2.html
@@ -51,17 +51,10 @@
 		<div class="header-top active-sticky">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-12 col-sm-2 col-md-3">
-						<div class="left">
-							<div class="logo">
-								<a href="index.html"><img src="https://roberthunt.com/images/rmh_logo.png" alt="R M Hunt" />
-								</a>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-12 col-sm-10 col-md-9">
-						<div class="right">
-							<nav class="mainmenu menu-hover-1 pull-right">
+					<div class="col-xs-12">
+						<div class="logo-and-menu text-center">
+							
+							<nav class="mainmenu menu-hover-1">
 								<div class="navbar-header">
 									<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 										<span class="icon-bar"></span>
@@ -101,9 +94,9 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-xs-12">
-					<div class="page-title ptb-110">
+					<div class="page-title">
 						<h1 class="mb-15">R M Hunt Fine Art</h1>
-						<h4 class="mb-5">Lands End</h4>
+						<h4 class="mb-5"></h4>
 					</div>
 				</div>
 			</div>
@@ -111,7 +104,7 @@
 	</div>
 	<!-- Breadcrumbs End -->
 	<!-- Portfolio Details Section Start -->
-	<div class="portfolio-details light-bg section-padding">
+	<div class="we-are white-bg ptb-40">
 		<div class="container">
 			<div class="row">
 				
