--- a/lands_end2.html
+++ b/lands_end2.html
@@ -120,9 +120,9 @@
 					<div class="portfolio-info">
 						<h3>Lands End | Big Sur, California</h3>
 						<p>Located on the central coast of California. The Spanish referred to the coastal region to the south of Monterey as <i>el país grande del sur</i>, meaning <i>'the big country of the south'</i>. This was often shortened to el sur grande <i>'the big south'</i>.</p>
-						<ul class="work-info pt-40">
+						<ul class="work-info pt-30">
 							<li><span>Medium :</span> <p>Acrylic On Wood Panel</p></li>
-							<li><span>Created:</span> <p>1996</p></li>
+							
 							<li><span>Size :</span> <p>25cm x 40cm</p></li>
 							<li class="share"><span>Please Share :</span> 
 								<div class="social-icon style1">
@@ -136,7 +136,7 @@
 								</div>
 								
 							</li>
-							<ul class="work-info pt-40" "navigation clearfix"><br><br>
+							<ul class="work-info" "navigation clearfix"><br><br>
 										<span><li><a href="https://roberthunt.com/robbins.html" style="margin-right: 50px;" class="previous">&#9664;</a>
                                            <a href="https://roberthunt.com/courthouse-towers.html" class="next">&#9654;</li></a></span>
 									</ul>
