--- a/yosemite-valley.html
+++ b/yosemite-valley.html
@@ -100,7 +100,7 @@
 	</div>
 	<!-- Breadcrumbs End -->
 	<!-- Portfolio Details Section Start -->
-	<div class="portfolio-details light-bg section-padding">
+	<div class="we-are white-bg ptb-40">
 		<div class="container">
 			<div class="row">
 				
