--- a/contact-us.html
+++ b/contact-us.html
@@ -87,7 +87,7 @@ span.email b {
       padding: 8px;
       box-sizing: border-box;
     }
-    .honeypot {
+    .spm {
       display: none;
     }
     button {
@@ -198,7 +198,7 @@ span.email b {
       <textarea id="message" name="message" rows="5" placeholder="Message" required></textarea>
     </div>
     <!-- field to catch the idiots -->
-    <div class="honeypot">
+    <div class="spm">
       <label for="website">Leave this field empty:</label>
       <input type="text" id="website" name="website">
     </div>
