--- a/contact-us.html
+++ b/contact-us.html
@@ -240,14 +240,14 @@ span.email b {
   </script>
 <br></p>
                   <center><p>Or send an email to: <span class="email">info@roberthunt<b>.roberthunt</b>.com</span></p></center>
-                    </div>
+                    </div><br><br>
 					
                 </div>
             </div>
         </div>
     </div>
     <!-- Error Content Section End -->
-	<hr class="devider"/>
+	<!--<hr class="devider"/>-->
     <!-- Footer Section Start -->
     <footer class="footer white-bg ptb-100 clearfix">
         <div class="container">
