--- a/index-a.html
+++ b/index-a.html
@@ -60,7 +60,7 @@
 								<div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
                                         <!-- HOME START -->
-                                        <li><a href="firstpage-a.html">Home</a>
+                                        <li><a href="firstpage-b.html">Home</a>
                                             
                                         <!-- HOME END -->
                                         <li><a href="abouta.html">About</a>
@@ -92,7 +92,7 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-xs-12">
-					<div class="page-title">
+					<div class="page-title ptb-80">
 						<h1 class="mb-15">R M Hunt Fine Art</h1>
 						<h4 class="mb-5">Selected Works</h4>
 					</div>
