--- a/contact-us.html
+++ b/contact-us.html
@@ -139,7 +139,7 @@ span.email b {
 								<div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
                                         <!-- HOME START -->
-                                        <li><a href="firstpage-a.html">Home</a>
+                                        <li><a href="firstpage-b.html">Home</a>
                                             
                                         </li>
                                         <!-- HOME END -->
