--- a/contact-us3.html
+++ b/contact-us3.html
@@ -27,7 +27,7 @@
   font-size: 18px;
   border-radius: 5px;
   line-height: 22px;
-  background-color:  #d5dbdb;
+  background-color:  #000;
   border:2px solid #fff;
   transition: all 0.3s;
   padding: 13px;
@@ -73,7 +73,7 @@ textarea {
             background: white;
             padding: 20px;
             border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            
         }
         .form-group {
             margin-bottom: 15px;
