--- a/contact-us3.html
+++ b/contact-us3.html
@@ -67,7 +67,7 @@ textarea {
             form { max-width:420px; margin:5px auto;
             margin: 0 auto;
             padding: 5px;
-            background-color: #f4f4f4;
+            background-color: #fff;
         }
         .form-container {
             background: white;
