--- a/contact-us3.html
+++ b/contact-us3.html
@@ -64,10 +64,10 @@ textarea {
         
 		body {
             font-family: Arial, sans-serif;
-            form { max-width:420px; margin:50px auto;
+            form { max-width:420px; margin:5px auto;
             margin: 0 auto;
-            padding: 20px;
-            background-color: #f4f4f4;
+            padding: 5px;
+            background-color: #fff;
         }
         .form-container {
             background: white;
