--- a/contact-us3.html
+++ b/contact-us3.html
@@ -128,7 +128,14 @@ textarea {
 		span.email b {
   display: none;
 }
+::placeholder {
+  color: #757575;
+  opacity: 1; /* Firefox */
+}
 
+::-ms-input-placeholder { /* Edge 12 -18 */
+  color: red;
+}
     </style>
 </head>
 <body>
