--- a/contact-us3.html
+++ b/contact-us3.html
@@ -18,7 +18,7 @@
     <!-- modernizr js -->
     
     <style>
-    <style>
+   
 		
 .feedback-input {
   color:blk;
@@ -136,6 +136,9 @@ textarea {
 ::-ms-input-placeholder { /* Edge 12 -18 */
   color: red;
 }
+hr.line1 {
+  border-top: 1px solid black; width:20%;
+  }
     </style>
 </head>
 <body>
