--- a/contact-us3.html
+++ b/contact-us3.html
@@ -142,7 +142,24 @@ hr.line1 {
     </style>
 </head>
 <body>
-<header class="header-style-1">
+  <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+          <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+        <![endif]-->
+
+    <!-- Loading Bar Start -->
+    <div id="loading-wrap">
+        <div class="loading-effect"></div>
+    </div>
+    <!-- Loading Bar End -->
+    <!-- Loading Bar End -->
+    <!-- Header Section Start -->
+       <header class="header-style-1">
 		<div class="header-top active-sticky">
 			<div class="container">
 				<div class="row">
@@ -160,7 +177,7 @@ hr.line1 {
 								<div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
                                         <!-- HOME START -->
-                                        <li><a href="firstpage-a.html">Home</a>
+                                        <li><a href="firstpage-b.html">Home</a>
                                             
                                         </li>
                                         <!-- HOME END -->
@@ -182,9 +199,11 @@ hr.line1 {
 			</div>
 		</div>
     </header>
+	<!-- Header Space -->
 	<div class="header-space"></div>
     <!-- Header Section End -->
 	<!-- Breadcrumbs Start -->
+	
 	<div class="pages-header bg-color-1">
 		<div class="container">
 			<div class="row text-center">
