--- a/glacier-point.html
+++ b/glacier-point.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
 
-    <title>R M Hunt Fine Art - Evening At Glacier Point</title>
+    <title>R M Hunt Fine Art - Twilight At Glacier Point</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
@@ -114,8 +114,8 @@
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
-						<h3>Evening At Glacier Point</h3>
-						<p>Glacier Point is a renowned viewpoint in Yosemite National Park, California, offering breathtaking panoramic views of Yosemite Valley, Half Dome, Yosemite Falls, and the surrounding Sierra Nevada mountains. Situated at an elevation of 7,214 feet, The Point is famous for its dramatic vistas, especially at sunset, and serves as a trailhead for hikes like the Four Mile Trail to Yosemite Valley or the Panorama Trail to Nevada Falls. </p>
+						<h3>Twilight At Glacier Point</h3>
+						<p>Millions of sunsets gone before, and this, but one more. The shadows spread and another day has passed. The sublime before the dark.</p><br><p> This renowned viewpoint in Yosemite National Park, California, offers breathtaking panoramic views of Yosemite Valley, Half Dome, Yosemite Falls, and the surrounding Sierra Nevada mountains. Situated at an elevation of 7,214 feet, The Point is famous for its dramatic sunsets, and serves as a trailhead for hikes like the Four Mile Trail to Yosemite Valley or the Panorama Trail to Nevada Falls. </p>
 						<ul class="work-info pt-30">
 							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
 							
