--- a/thanks.html
+++ b/thanks.html
@@ -88,7 +88,7 @@
 				<div class="col-xs-12">
 					<div class="page-title ptb-110">
 						<h1 class="mb-15">Thank You!</h1>
-						<h4 class="mb-5">We'll be in touch shortly.</h4>
+						<h4 class="mb-5"></h4>
 					</div>
 				</div>
 			</div>
