--- a/firstpage-a.html
+++ b/firstpage-a.html
@@ -76,6 +76,8 @@
                                         
                                         <li><a href="contact-us.html">Contact Us</a>
                                         </li>
+										<li><a href="newsletter.html">Newsletter</a>
+                                        </li>
                                     </ul>
 								</div>
 							</nav>
@@ -167,11 +169,11 @@
                 </div>
 				
             </div>
-			
-        </div>
-		<div class="view-all unset text-center">
+			<div class="view-all unset text-center">
                         <a class="btn mt-40" href="https://roberthunt.com/index-a.html">View More <i class="zmdi zmdi-arrow-right"></i></a><br><br>
                     </div>
+        </div>
+		
     </div>
     <!-- Team Section End -->
     <!-- Facts Area Start -->
