--- a/glacier-point.html
+++ b/glacier-point.html
@@ -73,6 +73,8 @@
                                         
                                         <li><a href="contact-us.html">Contact</a>
                                         </li>
+										<li><a href="newsletter.html">Newsletter</a>
+                                        </li>
                                     </ul>
 								</div>
 							</nav>
