--- a/contact-us.html
+++ b/contact-us.html
@@ -152,6 +152,8 @@ span.email b {
                                         
                                         <li><a href="contact-us.html">Contact</a>
                                         </li>
+										<li><a href="newsletter.html">Newsletter</a>
+                                        </li>
                                     </ul>
 								</div>
 							</nav>
