--- a/firstpage-b.html
+++ b/firstpage-b.html
@@ -76,6 +76,8 @@
                                         
                                         <li><a href="contact-us.html">Contact Us</a>
                                         </li>
+										<li><a href="newsletter.html">Newsletter</a>
+                                        </li>
                                     </ul>
 								</div>
 							</nav>
