--- a/index-a.html
+++ b/index-a.html
@@ -75,6 +75,8 @@
                                         
                                         <li><a href="contact-us.html">Contact</a>
                                         </li>
+										<li><a href="newsletter.html">Newsletter</a>
+                                        </li>
                                     </ul>
 								</div>
 							</nav>
