--- a/lands_end2.html
+++ b/lands_end2.html
@@ -77,6 +77,8 @@
                                         <!-- PORTFOLIO END -->
                                         <li><a href="contact-us.html">Contact</a>
                                         </li>
+										<li><a href="newsletter.html">Newsletter</a>
+                                        </li>
                                     </ul>
 								</div>
 							</nav>
