--- a/robbins.html
+++ b/robbins.html
@@ -93,6 +93,8 @@
                                         
                                         <li><a href="contact-us.html">Contact Us</a>
                                         </li>
+										<li><a href="newsletter.html">Newsletter</a>
+                                        </li>
                                     </ul>
 								</div>
 							</nav>
