--- a/newsletter.html
+++ b/newsletter.html
@@ -186,7 +186,7 @@ span.email b {
             <div class="row">
                 <div class="col-xs-12 col-sm-8 col-md-6 col-text-center">
                     <div class="error-content text-center"><br><br>
-					<p style="text-align: center; color:#000">Please subscribe for the latest updates.<br> We only send out updates such as new paintings or major news.<br> We never spam or share your email.</p>
+					<p style="text-align: center; color:#000">Please subscribe for the latest updates.<br> We only send out updates such as new paintings or major news.<br> We never spam or share your email.<br>You can unsubscribe at any time.</p>
   <form action="https://staticcontact.com/send/47b5a601-d21b-4f20-b06e-09e463b9b5cd" method="post" id="contactform">
 
         <label>
