--- a/newsletter.html
+++ b/newsletter.html
@@ -193,7 +193,7 @@ span.email b {
             <input type="email" name="email" style="width:100%" placeholder="Email" />
         </label><br>
 
-    <button type="submit">Submit</button>
+    <button type="submit">Subscribe</button>
     <script src="https://staticcontact.com/js/static_contact_botbuster.js"></script>
 </form>
 
