--- a/newsletter.html
+++ b/newsletter.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="fine art, paintings, landscapes, gallery, museum">
     <meta name="author" content="roberthunt.com">
 
-    <title>R M Hunt Fine Art - Contact</title>
+    <title>R M Hunt Fine Art - Newsletter</title>
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
