--- a/selected-works.html
+++ b/selected-works.html
@@ -138,13 +138,13 @@
                             <div class="single-portfolio overlay">
                                 <img src="https://roberthunt.com/images/le370250.jpg" alt="Lands End" />
                                 <div class="zoom-icon">
-                                    <a href="https://roberthunt.com/lands_end2.html">
+                                    <a href="https://roberthunt.com/lands_end.html">
                                         <i class="zmdi zmdi-link"></i>
                                     </a>
                                 </div>
                             </div>
                             <div class="project-title text-center">
-                                <a href="https://roberthunt.com/lands_end2.html"><h4 class="mb-5">Lands End</h4></a>
+                                <a href="https://roberthunt.com/lands_end.html"><h4 class="mb-5">Lands End</h4></a>
                                 
 								<hr class="line"/>
                             </div>
