--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
 								<div class="navbar-collapse collapse clearfix">
                                     <ul class="navigation clearfix">
                                         <!-- HOME START -->
-                                        <li><a href="firstpage-a.html">Home</a>
+                                        <li><a href="index.html">Home</a>
                                             
                                         </li>
                                         <!-- HOME END -->
-                                        <li><a href="abouta.html">About</a>
+                                        <li><a href="about.html">About</a>
                                         </li>
                                         <!-- PORTFOLIO START -->
-                                        <li><a href="index-a.html">Selected Works</a></li>
+                                        <li><a href="selected-works.html">Selected Works</a></li>
                                             
                                         <!-- PORTFOLIO END -->
                                         <!-- BLOG START -->
