--- a/contact.html
+++ b/contact.html
@@ -195,6 +195,7 @@ span.email b {
                 
                 <input type="email" id="email" name="email" placeholder="Email" required>
             </div>
+			<input type="hidden" name="_next" value="https://roberthunt.com/thanks.html">
             <div class="form-group">
                 
                 <textarea id="message" name="message" rows="5" placeholder="Message" required></textarea>
