--- a/contact.html
+++ b/contact.html
@@ -196,6 +196,7 @@ span.email b {
                 <input type="email" id="email" name="email" placeholder="Email" required>
             </div>
 			<input type="hidden" name="_next" value="https://roberthunt.com/thanks.html">
+			<input type="hidden" name="_captcha" value="false">
             <div class="form-group">
                 
                 <textarea id="message" name="message" rows="5" placeholder="Message" required></textarea>
