--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@ span.email b {
       padding: 8px;
       box-sizing: border-box;
     }
-    .spm {
+    _honey {
       display: none;
     }
     button {
@@ -200,6 +200,10 @@ span.email b {
             <div class="form-group">
                 
                 <textarea id="message" name="message" rows="5" placeholder="Message" required></textarea>
+            </div>
+			<div class="_honey">
+      
+            <input type="text" name="_honey" style="display:none">
             </div>
 			<div class="form-group"><button type="submit">Send Message</button></div>
 			</form>
