--- a/contact-us.html
+++ b/contact-us.html
@@ -205,10 +205,10 @@ span.email b {
             <input type="checkbox" name="botcheck" class="hidden" style="display: none;">
             </div>
 			<input type="hidden" name="redirect" value="https://roberthunt.com/thanks.html">
-			
+			<div class="h-captcha" data-captcha="true"></div>
 			<div class="form-group"><button type="submit">Send Message</button></div>
 			</form>
-			
+		<script src="https://web3forms.com/client/script.js" async defer></script>	
     
 <br>
                   <center><p>Or send an email to: <span class="email">info@roberthunt<b>.roberthunt</b>.com</span></p></center>
