--- a/contact-us.html
+++ b/contact-us.html
@@ -103,6 +103,9 @@ span.email b {
     button:hover {
       background-color: #0056b3;
     }
+    ::placeholder {
+    color: #808080; 
+    }		
 </style>
 
 </head>
