--- a/contact-us.html
+++ b/contact-us.html
@@ -103,9 +103,9 @@ span.email b {
     button:hover {
       background-color: #0056b3;
     }
-    ::placeholder {
-    color: #808080; 
-    }		
+	::placeholder {
+  color: #808080; 
+}
 </style>
 
 </head>
@@ -225,21 +225,23 @@ span.email b {
     <textarea id="message" name="message" placeholder="Message" required></textarea>
   </div>
 
-  
+  <!-- reCAPTCHA integration -->
+  <div class="g-recaptcha" data-sitekey="6LfRE1wrAAAAAKyhTnjU0fMFD1B3RSTL_NL2hhip"></div>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
   <!-- Optional redirect URLs -->
   <input type="hidden" name="redirectTo" value="https://roberthunt.com/thanks.html">
-  <div class="form-group captcha">
+  <!--<div class="form-group captcha">
             <label for="captcha"></label>
             <span id="captchaQuestion"></span>
             <input type="number" id="captcha" name="captcha" required>
             <input type="hidden" id="captchaAnswer" name="captchaAnswer">
-        </div>
+        </div>-->
 
   <button type="submit">Send Message</button>
 </form>
 
-  <script>
+  <!--<script>
         function generateCaptcha() {
             const num1 = Math.floor(Math.random() * 10) + 1;
             const num2 = Math.floor(Math.random() * 10) + 1;
@@ -262,7 +264,7 @@ span.email b {
                 document.getElementById('captcha').value = '';
             }
         });
-    </script>
+    </script>-->
 <br></p>
                   <center><p>Or send an email to: <span class="email">info@roberthunt<b>.roberthunt</b>.com</span></p></center>
                     </div><br><br>
