--- a/contact-us.html
+++ b/contact-us.html
@@ -226,7 +226,7 @@ span.email b {
   </div>
 
   <!-- reCAPTCHA integration -->
-  <div class="g-recaptcha" data-sitekey="6LfRE1wrAAAAAKyhTnjU0fMFD1B3RSTL_NL2hhip"></div>
+  <center><div class="g-recaptcha" data-sitekey="6LfRE1wrAAAAAKyhTnjU0fMFD1B3RSTL_NL2hhip"></div></center>
   <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
   <!-- Optional redirect URLs -->
