--- a/contact-us.html
+++ b/contact-us.html
@@ -216,7 +216,7 @@ span.email b {
 			
     
 <br>
-                  <center><p>Or send an email to: <span class="email">admin@roberthunt<b>.roberthunt</b>.com</span></p></center>
+                  <center><p>Or send an email to: <span class="email">info@roberthunt<b>.roberthunt</b>.com</span></p></center>
                     </div><br><br>
 					
                 </div>
