--- a/arlo/arlo_new/arlo/index-lines.html
+++ b/arlo/arlo_new/arlo/index-lines.html
@@ -523,7 +523,7 @@
 											<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Mobile Mockup" data-category="Modalbox">
 												<a class="popup_info portfolio_popup" href="#">
 													<img src="img/thumbs/1-1.jpg" alt="" />
-													<div class="abs_image" data-img-url="img/portfolio/4.jpg"></div>
+													<div class="abs_image" data-img-url="https://roberthunt.com/images/gp_large.jpg"></div>
 												</a>
 											</div>
 											
