--- a/arlo/arlo_new/arlo/index-lines.html
+++ b/arlo/arlo_new/arlo/index-lines.html
@@ -113,11 +113,17 @@ form { max-width:100%; margin:50px auto;
 					</div>
 					<div class="social">
 						<ul>
-							<li><a href="#"><i class="icon-facebook-squared-1"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin-squared"></i></a></li>
-							<li><a href="#"><i class="icon-vimeo-squared"></i></a></li>
-							<li><a href="#"><i class="icon-youtube-squared"></i></a></li>
-							<li><a href="#"><i class="icon-skype-circled"></i></a></li>
+						 <li><a href="https://www.facebook.com/sharer.php?u=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/fb14.jpg" alt="Facebook"></a></li>&nbsp
+							<li><a href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings" target="_blank">
+            <img src="https://roberthunt.com/images/x14.png" alt="Twitter"></a></li>&nbsp
+							<li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com" target="_blank">
+            <img src="https://roberthunt.com/images/in14.png" alt="LinkedIn">
+        </a></li>&nbsp
+							<li><a href="https://api.whatsapp.com/send?text=https://roberthunt.com" target="_blank">
+            <img src="https://roberthunt.com/images/wap15.png" alt="Whatsapp"></a></li>&nbsp
+							<li><a href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com" target="_blank">
+            <img src="https://roberthunt.com/images/p14.png" alt="Pinterest"></a></li>
+							
 						</ul>
 					</div>
 					<div class="copyright">
@@ -155,15 +161,10 @@ form { max-width:100%; margin:50px auto;
 				<span>Please Share:</span>
 					<ul>
 						 <li><a href="https://www.facebook.com/sharer.php?u=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/fb14.jpg" alt="Facebook"></a></li>&nbsp
-							<li><a href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings" target="_blank">
-            <img src="https://roberthunt.com/images/x14.png" alt="Twitter"></a></li>&nbsp
-							<li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com" target="_blank">
-            <img src="https://roberthunt.com/images/in14.png" alt="LinkedIn">
-        </a></li>&nbsp
-							<li><a href="https://api.whatsapp.com/send?text=https://roberthunt.com" target="_blank">
-            <img src="https://roberthunt.com/images/wap15.png" alt="Whatsapp"></a></li>&nbsp
-							<li><a href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com" target="_blank">
-            <img src="https://roberthunt.com/images/p14.png" alt="Pinterest"></a></li>
+						<li><a href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings" target="_blank"><img src="https://roberthunt.com/images/x14.png" alt="Twitter"></a></li>&nbsp
+					    <li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/in14.png" alt="LinkedIn"></a></li>&nbsp
+						<li><a href="https://api.whatsapp.com/send?text=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/wap15.png" alt="Whatsapp"></a></li>&nbsp
+					    <li><a href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/p14.png" alt="Pinterest"></a></li>
 							
 						</ul>
 				</div>
