--- a/arlo/arlo_new/arlo/index-lines.html
+++ b/arlo/arlo_new/arlo/index-lines.html
@@ -113,11 +113,11 @@ form { max-width:100%; margin:50px auto;
 					</div>
 					<div class="social">
 						<ul>
-							<li><a href="#"><i class="icon-facebook-squared-1"></i></a></li>
-							<li><a href="#"><i class="icon-linkedin-squared"></i></a></li>
-							<li><a href="#"><i class="icon-vimeo-squared"></i></a></li>
-							<li><a href="#"><i class="icon-youtube-squared"></i></a></li>
-							<li><a href="#"><i class="icon-skype-circled"></i></a></li>
+							<li><a href="https://www.facebook.com/sharer.php?u=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/fb14.jpg" alt="Facebook"></a></li>&nbsp
+							<li><a href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings" target="_blank"><img src="https://roberthunt.com/images/x14.png" alt="Twitter"></a></li>&nbsp
+							<li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/in14.png" alt="LinkedIn"></a></li>&nbsp
+							 <li><a href="https://api.whatsapp.com/send?text=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/wap15.png" alt="Whatsapp"></a></li>&nbsp
+							<li><a href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/p14.png" alt="Pinterest"></a></li>
 						</ul>
 					</div>
 					<div class="copyright">
@@ -129,46 +129,7 @@ form { max-width:100%; margin:50px auto;
 			
 		<!-- /MOBILE MENU -->
 		
-		<!-- SIDEBAR MENU -->
-		<div class="arlo_tm_sidebar_menu">
-			<div class="sidebar_inner">
-				<div class="logo" data-type="avatar"> <!-- You can set your own avatar or image or text as a logo. data-type values are: "avatar", "image", "text" -->
-					<div class="avatar" data-img-url="https://roberthunt.com/images/mypict.jpg"></div>
-					<div class="image"><img src="img/logo/logo.png" alt="" /></div>
-					<div class="text"><h3>ARLO</h3></div>
-				</div>
-				<div class="menu">
-					<ul class="transition_link">
-						<li class="active"><a href="#home">Home</a></li>
-						<li><a href="#about">About</a></li>
-						<!--<li><a href="#services">Services</a></li>-->
-						<li><a href="#portfolio">Portfolio</a></li>
-						<!--<li><a href="#blog">Blog</a></li>-->
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</div>
-				<div class="copyright">
-					<p>Copyright &copy; R M Hunt Fine Art <a class="line_effect" href="#"></a></p>
-					<p>All rights are reserved</p>
-				</div>
-				<div class="social">
-				<span>Please Share:</span>
-					<ul>
-						 <li><a href="https://www.facebook.com/sharer.php?u=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/fb14.jpg" alt="Facebook"></a></li>&nbsp
-							<li><a href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings" target="_blank">
-            <img src="https://roberthunt.com/images/x14.png" alt="Twitter"></a></li>&nbsp
-							<li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com" target="_blank">
-            <img src="https://roberthunt.com/images/in14.png" alt="LinkedIn">
-        </a></li>&nbsp
-							<li><a href="https://api.whatsapp.com/send?text=https://roberthunt.com" target="_blank">
-            <img src="https://roberthunt.com/images/wap15.png" alt="Whatsapp"></a></li>&nbsp
-							<li><a href="https://www.pinterest.com/pin/create/button/?url=https://roberthunt.com" target="_blank">
-            <img src="https://roberthunt.com/images/p14.png" alt="Pinterest"></a></li>
-							
-						</ul>
-				</div>
-			</div>
-		</div>
+		
 		<!-- /SIDEBAR MENU -->
 		<div class="arlo_tm_sidebar_menu">
 			<div class="sidebar_inner">
