--- a/arlo/arlo_new/arlo/index-lines.html
+++ b/arlo/arlo_new/arlo/index-lines.html
@@ -121,7 +121,8 @@ form { max-width:100%; margin:50px auto;
 						</ul>
 					</div>
 					<div class="copyright">
-						<p>Copyright &copy; 2024</p>
+						<p>Copyright &copy; R M Hunt Fine Art</p>
+						<p>Best Viewed On Larger Devices</p>
 					</div>
 				</div>
 			</div>
