--- a/arlo/arlo_new/arlo/index-lines.html
+++ b/arlo/arlo_new/arlo/index-lines.html
@@ -1,19 +1,14 @@
-<!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="R M Hunt Fine Art oil paintings of the American Landscape">
+    <meta name="keywords" content="fine art, paintings, california, landscapes, gallery, museum">
+    <meta name="author" content="roberthunt.com">
+	<link rel="apple-touch-icon" sizes="180x180" href="ico/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="ico/favicon-16x16.png">
 
-<head>
-
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-<meta name="description" content="Name of your web site">
-<meta name="author" content="Marketify">
-
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-<title>Arlo</title>
+    <title>R M Hunt Fine Art - Home</title>
 
 <!-- STYLES -->
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Syne:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -155,7 +150,7 @@ form { max-width:100%; margin:50px auto;
 				</div>
 				<div class="social">
 				<span>Please Share:</span>
-					<ul>
+					<ul><br>
 						 <li><a href="https://www.facebook.com/sharer.php?u=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/fb14.jpg" alt="Facebook"></a></li>&nbsp
 						<li><a href="https://twitter.com/share?url=https://roberthunt.com&text=Fine Art Oil Paintings" target="_blank"><img src="https://roberthunt.com/images/x14.png" alt="Twitter"></a></li>&nbsp
 					    <li><a href="https://www.linkedin.com/shareArticle?mini=true&url=https://roberthunt.com" target="_blank"><img src="https://roberthunt.com/images/in14.png" alt="LinkedIn"></a></li>&nbsp
