--- a/selected-works.html
+++ b/selected-works.html
@@ -239,13 +239,28 @@
 								<hr class="line"/>
                             </div>
                         </div>
-                        <div class="grid-item work3d print percent-33">
+						<div class="grid-item work3d print percent-33">
+                            <div class="single-portfolio overlay">
+                                <img src="https://roberthunt.com/images/rockypoint_370250.jpg" alt="Sunset At Rocky Point" />
+                                <div class="zoom-icon">
+                                    <a href="https://roberthunt.com/rockypoint_large.html">
+                                        <i class="zmdi zmdi-link"></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="project-title text-center">
+                                <a href="https://roberthunt.com/rocky-point.html"><h4 class="mb-5">Sunset At Rocky Point</h4></a>
+                                
+								<hr class="line"/>
+                            </div>
+                        </div>
+                        <!--<div class="grid-item work3d print percent-33">
                             <div class="single-portfolio overlay">
                                 <img src="https://roberthunt.com/images/mtc.jpg" alt="more to come" />
                                 <div class="zoom-icon">
                                    <!-- <a href="">
                                         <i class="zmdi zmdi-link"></i>
-                                    </a>-->
+                                    </a>
                                 </div>
                             </div>
                             <div class="project-title text-center">
@@ -253,7 +268,7 @@
                                 
 								<hr class="line"/>
                             </div>
-                        </div>
+                        </div>-->
                         <!--<div class="grid-item work3d design new percent-33">
                             <div class="single-portfolio overlay">
                                 <img src="assets/img/portfolio/five/9.jpg" alt="" />
