--- a/rocky-point.html
+++ b/rocky-point.html
@@ -108,15 +108,15 @@
 				<div class="col-xs-12 col-sm-6 col-md-7">
 					<div class="portfolio-image mb-30">
 						<!--<a class="venobox" data-gall="gall-img" href="https://roberthunt.com/images/yosemite_large.jpg" alt="Yosemite">-->
-							<img src="https://roberthunt.com/images/pawnee-buttes_large.jpg" alt="Pawnee Buttes" />
+							<img src="https://roberthunt.com/images/rockypoint_large.jpg" alt="Rocky Point" />
 						</a>
 					</div>
 					
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
-						<h3>Sunset at Pawnee Buttes | Colorado</h3>
-						<p>The Pawnee Buttes are two prominent geological formations in northeastern Colorado, located within the Pawnee National Grassland, about 13 miles south of the Wyoming border. Rising approximately 300 feet above the surrounding prairie, these buttes are erosional remnants of the High Plains, shaped by wind and water over millions of years. </p>
+						<h3>Sunset At Rockly Point | Big Sur, California</h3>
+						<p>Rocky Point in Big Sur, California, is a scenic coastal spot along Highway 1, about 10 miles south of Carmel-by-the-Sea. Known for its breathtaking Pacific Ocean views, it’s a popular stop for travelers. The area features dramatic cliffs, rocky shores, and opportunities to spot wildlife like sea otters, dolphins, seals, and whales. </p>
 						<ul class="work-info pt-30">
 							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
 							
