--- a/selected-works.html
+++ b/selected-works.html
@@ -243,7 +243,7 @@
                             <div class="single-portfolio overlay">
                                 <img src="https://roberthunt.com/images/rockypoint_370250.jpg" alt="Sunset At Rocky Point" />
                                 <div class="zoom-icon">
-                                    <a href="https://roberthunt.com/rockypoint_large.html">
+                                    <a href="https://roberthunt.com/rocky-point.html">
                                         <i class="zmdi zmdi-link"></i>
                                     </a>
                                 </div>
