--- a/rocky-point.html
+++ b/rocky-point.html
@@ -116,7 +116,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
 						<h3>Sunset At Rockly Point | Big Sur, California</h3>
-						<p>Rocky Point in Big Sur, California, is a scenic coastal spot along Highway 1, about 10 miles south of Carmel-by-the-Sea. Known for its breathtaking Pacific Ocean views, it’s a popular stop for travelers. The area features dramatic cliffs, rocky shores, and opportunities to spot wildlife like sea otters, dolphins, seals, and whales. </p>
+						<p>The first Europeans to sight the Big Sur coast were Spanish mariners led by Juan Cabrillo in 1542, though they did not land. British explorer George Vancouver described the area in 1793 as a "small, high, rocky lump of land" near the shore. Rocky Point is on Highway 1 about 10 miles south of Carmel in Big Sur. The area's isolation was significant until the completion of Highway 1 in 1937, which opened up the Big Sur coast to visitors and made sites like Rocky Point more accessible.</p>
 						<ul class="work-info pt-30">
 							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
 							
