--- a/arlo/arlo_new/arlo/index-lines.html
+++ b/arlo/arlo_new/arlo/index-lines.html
@@ -904,7 +904,9 @@ form { max-width:100%; margin:50px auto;
 												<div class="popup_details">
 													<div class="main_details">
 														<div class="textbox">
-															<p>The first Europeans to sight the Big Sur coast were Spanish mariners led by Juan Cabrillo in 1542, though they did not land. British explorer George Vancouver described the area in 1793 as a "small, high, rocky lump of land" near the shore. Rocky Point is on Highway 1 about 10 miles south of Carmel in Big Sur. The area's isolation was significant until the completion of Highway 1 in 1937, which opened up the Big Sur coast to visitors and made sites like Rocky Point more accessible.</p>
+															<p>The first Europeans to sight the Big Sur coast were Spanish mariners led by Juan Cabrillo in 1542, though they did not land. British explorer George Vancouver described the area in 1793 as a "small, high, rocky lump of land" near the shore.</p><br>
+															
+															<p>Rocky Point is on Highway 1 about 10 miles south of Carmel in Big Sur. The area's isolation was significant until the completion of Highway 1 in 1937, which opened up the Big Sur coast to visitors and made sites like Rocky Point more accessible.</p>
 														</div>
 														<div class="detailbox">
 															<ul>
