--- a/pawnee-buttes-colorado.html
+++ b/pawnee-buttes-colorado.html
@@ -134,8 +134,8 @@
 								
 							</li>
 							<ul class="work-info" "navigation clearfix"><br><br>
-										<li><a href="https://roberthunt.com/pawnee-buttes-colorado.html" style="margin-right: 50px;" class="previous">&#9664;</a>
-                                           <a href="#" class="next">&#9654;</li></a>
+										<li><a href="https://roberthunt.com/tayrona-national-park.html" style="margin-right: 50px;" class="previous">&#9664;</a>
+                                           <a href="https://roberthunt.com/rocky-point.html" class="next">&#9654;</li></a>
 									</ul>
 						</ul>
 					</div>
