--- a/pawnee-buttes-colorado.html
+++ b/pawnee-buttes-colorado.html
@@ -115,7 +115,7 @@
 				</div>
 				<div class="col-xs-12 col-sm-6 col-md-5 mobile-mb-30">
 					<div class="portfolio-info">
-						<h3>Sunset at Pawnee Buttes | Colorado</h3>
+						<h3>Approaching Storm Pawnee Buttes | Colorado</h3>
 						<p>The Pawnee Buttes are two prominent geological formations in northeastern Colorado, located within the Pawnee National Grassland, about 13 miles south of the Wyoming border. Rising approximately 300 feet above the surrounding prairie, these buttes are erosional remnants of the High Plains, shaped by wind and water over millions of years. </p>
 						<ul class="work-info pt-30">
 							<li><span>Medium :</span> <p>Oil On Wood Panel</p></li>
